[workspace]
members = [
  "a01", 
  "b01", 
  "a02", 
  "b02", 
  "a03", 
  "b03", 
  "a04", 
  "b04", 
  "a05", 
  "a06", 
  "b06", 
  "a07", 
  "b07", 
  "a08", 
  "b08", 
  "a09", 
  "a10", 
  "a11", 
  "b11", 
  "a12", 
  "b12", 
  "a13", 
  "b13", 
  "a14", 
  "b14", 
  "a15", 
  "a16", 
  "b16", 
  "a17", 
  "b17", 
  "a18", 
  "b18", 
  "a19", 
  "b19", 
  "a20", 
  "b20", 
  "a21", 
  "b21", 
  "a22", 
  "b22", 
  "a23", 
  "b23", 
  "a24", 
]