[workspace]
members = [
  "a01", 
  "b01", 
  "a02", 
  "b02", 
  "a03", 
  "b03", 
  "a04", 
  "b04", 
  "a05", 
  "a06", 
  "b06", 
  "a07", 
  "b07", 
  "a08", 
  "b08", 
  "a09", 
  "a10", 
  "a11", 
  "b11", 
  "a12", 
  "b12", 
  "a13", 
  "b13", 
  "a14", 
  "b14", 
  "a15", 
  "a16", 
  "b16", 
  "a17", 
  "b17", 
  "a18", 
  "b18", 
  "a19", 
  "b19", 
  "a20", 
  "b20", 
  "a21", 
  "b21", 
  "a22", 
  "b22", 
  "a23", 
  "b23", 
  "a24", 
  "b24", 
  "a25", 
  "a26", 
  "b26", 
  "a27", 
  "b27", 
  "a28", 
  "b28", 
  "a29", 
  "b29", 
  "a30", 
  "b30", 
  "a31", 
  "b31", 
  "a32", 
  "b32", 
  "a33", 
  "b33", 
  "a34", 
  "b34", 
  "a35", 
  "a36", 
  "b36", 
  "a37", 
  "b37", 
  "a38", 
  "b38", 
  "a39", 
]